added video demo for a better grade

--- a/output/team.html
+++ b/output/team.html
@@ -14,20 +14,20 @@
         <div class="container">
             <div class="row"><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">javid de los santos<br /><br />Engineer</h5>
+            <h5 class="card-header">javid de los santos<br /><br />Manager</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email Address: javiddelossanto5@gmail.com</li>
-                <li class="list-group-item">GitHub: javiddelossantos5</li>
+                <li class="list-group-item">ID: 12345123</li>
+                <li class="list-group-item">Email Address: javiddelossantos5@gmail.com</li>
+                <li class="list-group-item">Office Phone: 435-219-22222</li>
             </ul>
             </div>
         </div><div class="col-6">
             <div class="card mx-auto mb-3" style="width: 18rem">
-            <h5 class="card-header">Sierra De los Santos<br /><br />Engineer</h5>
+            <h5 class="card-header">jacob black<br /><br />Intern</h5>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">ID: 2</li>
-                <li class="list-group-item">Email Address: sierradelossantos5@gmail.com</li>
-                <li class="list-group-item">GitHub: sierradelossantos5</li>
+                <li class="list-group-item">ID: 12341231</li>
+                <li class="list-group-item">Email Address: jacobbalack123@yahoo.con</li>
+                <li class="list-group-item">School: university of utah</li>
             </ul>
             </div>
         </div> </div>
